# rabbitmq_test

./: README.md
node/: Makefile  consumer.js  package.json  producer.js
python/: Makefile  consumer.py  docker-compose.yml  producer.py  pyproject.toml
rust/: Cargo.toml  Makefile
rust/src/: consumer.rs  producer.rs
