[tool.poetry]
name = "rabbitmq_test"
version = "0.1.0"
description = ""
authors = ["Kenichi Sato <ksato9700@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.1.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
